# mmkit

./: DESCRIPTION  NAMESPACE  README.md  requirements.txt
R/: DbConn.R  UberConf.R  UberConfWriter.R  bq_reader.R  classified_names.R  clean_bind.R  coalesce.R  count_pct.R  countsql.R  db_conn.R  expand_grid.R  fabric_deploy.R  field_conform_funs.R  findConn.R  first_not_na.R  get_tbl_cols.R  get_uber_conf.R  get_uuid.R  getcols.R  getrs.R  histvals.R  hot_encode.R  install_github_tar.R  is_blank.R  is_yes_no.R  make_deploy_template.R  query_collating_schema.R  sql_lst.R  ssa_national.R  str_form.R  test_UberConf.R  utils.R
data/: CopyOfclassified_names.RData  CopyOfssa_national.RData  datalist
docs/: authors.html  index.html
inst/: country_data.Rds
inst/etllib/: pyproject.toml  setup.py
inst/etllib/etllib/: __init__.py  utils.py
inst/etllib/etllib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
man/: BQReader.Rd  DbConn.Rd  UberConf.Rd  UberConfWriter.Rd  append_task_to_fabfile.Rd  build_packrat_job.Rd  build_parallel_run_job.Rd  build_virtualenv_job.Rd  classified_names.Rd  clean_bind.Rd  clean_country.Rd  clean_gpa.Rd  clean_level_of_education.Rd  clean_military_affiliated.Rd  clean_state.Rd  clean_work_exp.Rd  coalesce.Rd  conn_bigquery.Rd  conn_bigquery2.Rd  conn_mssql.Rd  conn_mysql.Rd  conn_postgres.Rd  conn_psql.Rd  conn_redshift.Rd  conn_rpostgres.Rd  conn_sqlite.Rd  convert_git_url.Rd  count_pct.Rd  countsql.Rd  db_conn-class.Rd  db_conn.Rd  deploy_packrat.Rd  deploy_project.Rd  expand_grid.Rd  export_jobs_to_jenkins.Rd  findConn.Rd  (+29 more)
(+74 files in other folders)
